--- a/dev/scss/base/base.scss
+++ b/dev/scss/base/base.scss
@@ -1,8 +1,12 @@
+html{
+    scroll-behavior: smooth;
+}
 body{
     background-color: $bg-color;
     color: $text-color;
     font-family:'Poppins', sans-serif;
     font-weight: 300;
+ 
 }
 
 .section{
