--- a/dev/scss/blocks/mediaquerys.scss
+++ b/dev/scss/blocks/mediaquerys.scss
@@ -17,6 +17,7 @@
 //MEDIAQUERY TABLET
 
 @include media-tablet {
+   
     .intro-sec4{
         margin-bottom: 2rem;
     }
@@ -46,6 +47,7 @@
         .post-text{
             font-size: 10px;
             padding: 0 1rem;
+            text-align: center;
         }
         .blog-post{
             width: 100%;
@@ -54,7 +56,10 @@
             flex-direction: column;
         }
         .post-block{
-            margin-bottom: 1rem;
+            margin-bottom: 0;
+            display: flex;
+            flex-direction: column;
+            
         }
     }
 }
@@ -64,13 +69,29 @@
 
 
 @include media-mobile{
+    .card-container .card-offer{
+        width: 100%;
+        margin-bottom: 2rem;
+        .card-text{
+            line-height: 1.5;
+            font-size: 14px !important;
+        }
+    }
     .section-3{
-        min-width: 350px;
         &::after{
             content: "";
             position: absolute;
             width: 100%;
+            height: 350px;
+            top: 35px;
+        }
+    
+        .img-about{
+            width: 90%;
+            margin-left: 1rem;
+            object-fit: cover;
             height: 250px;
+            
         }
     }
     .section-1{
@@ -167,4 +188,24 @@
     .footer{
         background-color: transparent;
     }
+   .h2-title{
+       font-size: 20px;
+   }
+   .intro-sec4 .button{
+       font-size: 15px;
+       padding: .5rem;
+   
+   }
+   .section-3{
+       padding: 0;
+   }
+   .section-3 .container-text3 {
+       padding:2rem;
+       align-items: flex-start;
+   }
+   .section{
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+    width: 100%;
+}
 }
