--- a/dev/scss/blocks/section4.scss
+++ b/dev/scss/blocks/section4.scss
@@ -8,6 +8,10 @@
         padding-right:2rem ;
     }
 }
+.img-destinations img{
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+}
 
 .img-destinations{
     display: flex;
