--- a/dev/scss/blocks/mediaquerys.scss
+++ b/dev/scss/blocks/mediaquerys.scss
@@ -69,6 +69,9 @@
 
 
 @include media-mobile{
+    .text{
+        font-size: 17px;
+    }
     .card-container .card-offer{
         width: 100%;
         margin-bottom: 2rem;
@@ -208,4 +211,5 @@
     padding-bottom: 2.5rem;
     width: 100%;
 }
+
 }
