--- a/dev/scss/blocks/mediaquerys.scss
+++ b/dev/scss/blocks/mediaquerys.scss
@@ -72,6 +72,10 @@
     .text{
         font-size: 17px;
     }
+    .section-1 h1{
+        font-size: 31px;
+        line-height: 1.4;
+    }
     .card-container .card-offer{
         width: 100%;
         margin-bottom: 2rem;
@@ -113,9 +117,7 @@
             padding: 2rem 0;
         }
     }
-    .section-1 h1{
-        font-size: 25px;
-    }
+  
     .section{
         padding-right: 2rem;
         padding-left: 2rem;
