--- a/dev/scss/base/base.scss
+++ b/dev/scss/base/base.scss
@@ -4,7 +4,7 @@ html{
 body{
     background-color: $bg-color;
     color: $text-color;
-    font-family:'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 300;
  
 }
